changed text to seed; updated creation mask

--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -3,7 +3,10 @@
     Title: {{game?.title}} 
 </p>
 <p>
-    Text: {{game?.text}}
+    Seed: {{game?.seed}}
+</p>
+<p>
+    Size: {{game?.mapsize}}
 </p>
 <p>
     Date: {{game?.date}}
