--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,17 @@
-
-<div style="padding: 13px;">
-    <button (click)='createGame()'>Create New Game</button>
-
-    <input type="text" [(ngModel)]="title" />
-    <input type="text" [(ngModel)]="text" />
-
+<div>
+    <mat-form-field appearance="outline">
+      <mat-label>Title</mat-label>
+      <input matInput type="text" [(ngModel)]="newGame.title">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Seed</mat-label>
+        <input matInput type="number" [(ngModel)]="newGame.seed">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Map Size</mat-label>
+        <input matInput type="number" [(ngModel)]="newGame.mapsize">
+    </mat-form-field>
+    <button mat-button (click)='createGame()'>Create New Game</button>
 </div>
 
 <div style="padding: 13px;">
