--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -21,7 +21,7 @@
             <mat-card-subtitle></mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <button mat-button [routerLink]="['/game', game._id]">Play</button>
+            <button mat-button [routerLink]="['/games', game._id]">Play</button>
             <button mat-icon-button	(click)='deleteGame(game._id)'>
                 <fa-icon [icon]="faTrash" size="lg"></fa-icon>
             </button>
