--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,12 @@
   <h1>
     RTS WebEnd 
   </h1>
-  <button mat-button routerLink="/">Games</button>
+  <button mat-button routerLink="/home">Home</button>
+  <button mat-button routerLink="/games">Games</button>
   <button mat-button routerLink="/about">About</button>
-
+  <button mat-button *ngIf="!auth.isLoggedIn()" routerLink="/login">Sign in</button>
+  <button mat-button *ngIf="auth.isLoggedIn()" routerLink="/profile">{{ auth.getUserDetails()?.name }}</button>
+  <button mat-button *ngIf="auth.isLoggedIn()" (click)="auth.logout()">Logout</button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
