--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -18,7 +18,7 @@
     <mat-card *ngFor="let game of games" style="margin-top:10px;">
         <mat-card-header>
             <mat-card-title>Title: {{game.title}}</mat-card-title>
-            <mat-card-subtitle></mat-card-subtitle>
+            <mat-card-subtitle>Seed: {{game.seed}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
             <button mat-button [routerLink]="['/games', game._id]">Play</button>
