added player to game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <h1>
-    RTS WebEnd 
+    TBS WebEnd 
   </h1>
   <button mat-button routerLink="/home">Home</button>
   <button mat-button routerLink="/games">Games</button>
