--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -9,7 +9,11 @@
         <mat-list-item role="listitem">Title: {{game?.title}}</mat-list-item>
         <mat-list-item role="listitem">Seed: {{game?.seed}}</mat-list-item>
         <mat-list-item role="listitem">Size: {{game?.mapsize}} </mat-list-item>
-        <mat-list-item role="listitem">Date: {{game?.date}}</mat-list-item>
+        <mat-list-item role="listitem">Date: {{game?.date}}</mat-list-item>   
+</mat-list>
+
+<mat-list *ngFor="let player of game?.players">
+    <mat-list-item>Spieler: {{player}}</mat-list-item>
 </mat-list>
 
 <button mat-button [routerLink]="['regions']">Show Regions</button>
