refactored regions to cities

--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -16,6 +16,6 @@
     <mat-list-item>Spieler: {{player}}</mat-list-item>
 </mat-list>
 
-<button mat-button [routerLink]="['regions']">Show Regions</button>
+<button mat-button [routerLink]="['cities']">Show Cities</button>
 
 <router-outlet></router-outlet>
