--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
   <button mat-button routerLink="/home">Home</button>
   <button mat-button routerLink="/characters">Characters</button>
-  <button mat-button routerLink="/regions">Regions (Deprecated)</button>
+  <button mat-button routerLink="/regions">World</button>
   <button mat-button routerLink="/about">About</button>
   <button mat-button *ngIf="!auth.isLoggedIn()" routerLink="/login">Sign in</button>
   <button mat-button *ngIf="auth.isLoggedIn()" routerLink="/profile">{{ auth.getUserDetails()?.name }}</button>
