--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -9,9 +9,9 @@
         <mat-list-item role="listitem">Date: {{region?.date}}</mat-list-item>   
 </mat-list>
 
-<mat-list *ngFor="let player of region?.players">
-    <mat-list-item>Spieler: {{player}}</mat-list-item>
-</mat-list>
+<div>
+    World Map
+</div>
 
 <button mat-button [routerLink]="['cities']">Show Cities</button>
 
