--- a/src/app/region/region.component.html
+++ b/src/app/region/region.component.html
@@ -15,13 +15,17 @@
 </div>
 
 <div>
+    World Map
+</div>
+
+<div>
     <mat-card *ngFor="let region of regions" style="margin-top:10px;">
         <mat-card-header>
             <mat-card-title>Title: {{region.title}}</mat-card-title>
             <mat-card-subtitle>Seed: {{region.seed}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <button mat-button [routerLink]="['/regions', region._id]">Play</button>
+            <button mat-button [routerLink]="['/regions', region._id]">Go to Region</button>
             <button mat-icon-button	(click)='deleteRegion(region._id)'>
                 <fa-icon [icon]="faTrash" size="lg"></fa-icon>
             </button>
