--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -6,16 +6,17 @@
 </div>
 
 <mat-list role="list">
+        <mat-list-item role="listitem">UserId: {{character?.userId}}</mat-list-item>   
         <mat-list-item role="listitem">Name: {{character?.name}}</mat-list-item>
         <mat-list-item role="listitem">Gender: {{character?.gender}}</mat-list-item>
         <mat-list-item role="listitem">RegionId: {{character?.regionId}} </mat-list-item>
+        <mat-list-item role="listitem">CityId: {{character?.cityId}} </mat-list-item>
         <mat-list-item role="listitem">HP: {{character?.hp}}</mat-list-item>   
         <mat-list-item role="listitem">Strength: {{character?.strength}}</mat-list-item>   
         <mat-list-item role="listitem">Agility: {{character?.agility}}</mat-list-item>   
         <mat-list-item role="listitem">Intelligence: {{character?.intelligence}}</mat-list-item>   
-        <mat-list-item role="listitem">UserId: {{character?.userId}}</mat-list-item>   
 </mat-list>
 
-<button mat-button [routerLink]="['regions', character?.regionId]">Show current region</button>
+<label>Current city: {{city?.name}}</label>
 
 <router-outlet></router-outlet>
