--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -3,15 +3,23 @@
       <mat-label>Name</mat-label>
       <input matInput type="text" [(ngModel)]="newCharacter.name">
     </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Gender</mat-label>
-        <input matInput type="number" [(ngModel)]="newCharacter.gender">
-    </mat-form-field>
+    <mat-radio-group aria-label="Gender" [(ngModel)]="newCharacter.gender">
+        <mat-radio-button value="0">Male</mat-radio-button>
+        <mat-radio-button value="1">Female</mat-radio-button>
+    </mat-radio-group>
     <mat-form-field appearance="outline">
         <mat-label>Region</mat-label>
-        <mat-select [(ngModel)]="newCharacter.regionId">
+        <mat-select [(ngModel)]="newCharacter.regionId" (selectionChange)="updateCities($event.value)">
             <mat-option *ngFor="let region of regions" [value]="region._id">
               {{ region.title }}
+            </mat-option>
+          </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>City</mat-label>
+        <mat-select [(ngModel)]="newCharacter.cityId">
+            <mat-option *ngFor="let city of cities" [value]="city._id">
+              {{ city.name }}
             </mat-option>
           </mat-select>
     </mat-form-field>
