added os logo; toggle show city; city shows current characters

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<img src="assets\olympus_studios_logo.png">
 <p style="padding: 13px;">
-    by David Diener 2020
+    by Olympus Studios 2021
 </p>
