added bootstrap for navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,33 @@
-<mat-toolbar color="primary">
-  <h1>
-    TBS WebEnd 
-  </h1>
-  <button mat-button routerLink="/home">Home</button>
-  <button mat-button routerLink="/characters">Characters</button>
-  <button mat-button routerLink="/regions">World</button>
-  <button mat-button routerLink="/about">About</button>
-  <button mat-button *ngIf="!auth.isLoggedIn()" routerLink="/login">Sign in</button>
-  <button mat-button *ngIf="auth.isLoggedIn()" routerLink="/profile">{{ auth.getUserDetails()?.name }}</button>
-  <button mat-button *ngIf="auth.isLoggedIn()" (click)="auth.logout()">Logout</button>
-</mat-toolbar>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="/home">TBS WebEnd </a>
+  <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"  aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarTogglerDemo02">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02" [ngbCollapse]="isCollapsed">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/characters">Characters</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/regions">World</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/profile">{{ auth.getUserDetails()?.name }}</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="!auth.isLoggedIn()" routerLink="/login">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="auth.isLoggedIn()" (click)="auth.logout()">Logout</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
