--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,5 +10,5 @@
     <button type="submit" class="btn btn-default">Sign in!</button>
   </form>
 
-  <label>Not a Member yet?</label>
+  <label>Not a member yet?&nbsp;</label>
   <a routerLink="/register">Register now</a>
