converted all components to bootstrap grid system

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,10 @@
-<img src="assets\olympus_studios_logo.png">
-<p style="padding: 13px;">
-    by Olympus Studios 2021
-</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <img src="assets\olympus_studios_logo.png">
+    </div>
+    <div class="row justify-content-center">
+        <p style="padding: 13px;">
+            by Olympus Studios 2021
+        </p>
+    </div>
+</div>
