--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -1,19 +1,19 @@
-<div>
-    <h1> Character # {{character?._id}}</h1>
-</div>
-
-<mat-list role="list">
-        <mat-list-item role="listitem">UserId: {{character?.userId}}</mat-list-item>   
-        <mat-list-item role="listitem">Name: {{character?.name}}</mat-list-item>
-        <mat-list-item role="listitem">Gender: {{character?.gender}}</mat-list-item>
-        <mat-list-item role="listitem">RegionId: {{character?.regionId}} </mat-list-item>
-        <mat-list-item role="listitem">CityId: {{character?.cityId}} </mat-list-item>
-        <mat-list-item role="listitem">HP: {{character?.hp}}</mat-list-item>   
-        <mat-list-item role="listitem">Strength: {{character?.strength}}</mat-list-item>   
-        <mat-list-item role="listitem">Agility: {{character?.agility}}</mat-list-item>   
-        <mat-list-item role="listitem">Intelligence: {{character?.intelligence}}</mat-list-item>   
-</mat-list>
-
-<label>Current city: {{city?.name}}</label>
-
+<div class="container">
+    <div class="row justify-content-center"> 
+        <h1> Character # {{character?._id}}</h1>
+    </div>
+    <div class="row justify-content-center">    
+        <mat-list role="list">
+                <mat-list-item role="listitem">UserId: {{character?.userId}}</mat-list-item>   
+                <mat-list-item role="listitem">Name: {{character?.name}}</mat-list-item>
+                <mat-list-item role="listitem">Gender: {{character?.gender}}</mat-list-item>
+                <mat-list-item role="listitem">Region Id: {{character?.regionId}} </mat-list-item>
+                <mat-list-item role="listitem">City Id: {{character?.cityId}} </mat-list-item>
+                <mat-list-item role="listitem">City name: {{city?.name}}</mat-list-item>   
+                <mat-list-item role="listitem">HP: {{character?.hp}}</mat-list-item>   
+                <mat-list-item role="listitem">Strength: {{character?.strength}}</mat-list-item>   
+                <mat-list-item role="listitem">Agility: {{character?.agility}}</mat-list-item>   
+                <mat-list-item role="listitem">Intelligence: {{character?.intelligence}}</mat-list-item>   
+        </mat-list>
+    </div>
 <router-outlet></router-outlet>
