--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,13 +1,13 @@
-<div>
+<div class="container">
     <mat-card *ngFor="let city of cities" style="margin-top:10px;">
-        <mat-card-header>
-            <mat-card-title>Name: {{city.element.name}}</mat-card-title>
-            <mat-card-subtitle>Description: The {{city.element.description}}</mat-card-subtitle>
-
-            <mat-list-item *ngFor="let char of city.chars">
-                <button mat-button [routerLink]="['/characters', char._id]">{{char.name}}</button>
-             </mat-list-item>
-
-        </mat-card-header>
+        <div class="row">
+            <mat-card-header>
+                <mat-card-title>Name: {{city.element.name}}</mat-card-title>
+                <mat-card-subtitle>Description: The {{city.element.description}}</mat-card-subtitle>
+                <mat-list-item *ngFor="let char of city.chars">
+                    <button mat-button [routerLink]="['/characters', char._id]">{{char.name}}</button>
+                </mat-list-item>
+            </mat-card-header>
+        </div>
     </mat-card>
 </div>
