--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/* Global CSS */
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
@@ -5,3 +6,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+hr { 
+    height: 1px; 
+    background: black; 
+}
