--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,14 +35,8 @@
 
 <router-outlet></router-outlet>
 
-<!-- Footer -->
-<footer class="page-footer font-small blue">
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2021 Copyright:
-    <a href="https://olympus-studios.com/"> Olympus-Studios.com</a>
+<footer class="page-footer font-small blue bg-dark">
+  <div class="footer-copyright text-center py-3 bg-dark text-light">© 2021 Copyright:
+    <a class="text-light" href="https://olympus-studios.com/"> Olympus-Studios.com</a>
   </div>
-  <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
