--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>Willkommen!</p>
+<div class="container">
+    <div class="row justify-content-center"> 
+        <h1>Willkommen!</h1>
+    </div>
+</div>
