--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,10 +1,8 @@
-<div class="form-horizontal">
-    <div class="form-group">
-      <label class="col-sm-3 control-label">Full name</label>
-      <p class="form-control-static">{{ details?.name }}</p>
-    </div>
-    <div class="form-group">
-      <label class="col-sm-3 control-label">Email</label>
-      <p class="form-control-static">{{ details?.email }}</p>
-    </div>
+<div class="container">
+  <div class="row justify-content-center"> 
+      <label class="control-label">Full name: {{ details?.name }}</label>
   </div>
+  <div class="row justify-content-center"> 
+    <label class="control-label">Email: {{ details?.email }}</label>
+  </div>
+</div>
