--- a/src/app/region/region.component.html
+++ b/src/app/region/region.component.html
@@ -1,34 +1,45 @@
-<div>
-    <mat-form-field appearance="outline">
-      <mat-label>Title</mat-label>
-      <input matInput type="text" [(ngModel)]="newRegion.title">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Seed</mat-label>
-        <input matInput type="number" [(ngModel)]="newRegion.seed">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Map Size</mat-label>
-        <input matInput type="number" [(ngModel)]="newRegion.mapsize">
-    </mat-form-field>
-    <button mat-button (click)='createRegion()'>Create New Region</button>
-</div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col my-auto">
+            <mat-form-field appearance="outline">
+            <mat-label>Title</mat-label>
+            <input matInput type="text" [(ngModel)]="newRegion.title">
+            </mat-form-field>
+        </div>
+        <div class="col my-auto">
+            <mat-form-field appearance="outline">
+                <mat-label>Seed</mat-label>
+                <input matInput type="number" [(ngModel)]="newRegion.seed">
+            </mat-form-field>
+        </div>
+        <div class="col my-auto">
+            <mat-form-field appearance="outline">
+                <mat-label>Map Size</mat-label>
+                <input matInput type="number" [(ngModel)]="newRegion.mapsize">
+            </mat-form-field>
+        </div>
+        <div class="col my-auto">
+            <button  mat-raised-button color="primary" (click)='createRegion()'>Create New Region</button>
+        </div>
+    </div>
 
-<div>
-    World Map
-</div>
-
-<div>
-    <mat-card *ngFor="let region of regions" style="margin-top:10px;">
-        <mat-card-header>
-            <mat-card-title>Title: {{region.title}}</mat-card-title>
-            <mat-card-subtitle>Seed: {{region.seed}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-actions>
-            <button mat-button [routerLink]="['/regions', region._id]">Go to Region</button>
-            <button mat-icon-button	(click)='deleteRegion(region._id)'>
-                <fa-icon [icon]="faTrash" size="lg"></fa-icon>
-            </button>
-        </mat-card-actions>
-    </mat-card>
+    <div class="row justify-content-center">
+        World Map
+    </div>
+    <div class="row justify-content-center">
+        <mat-card *ngFor="let region of regions" style="margin-top:10px;">
+            <div class="row">
+                <mat-card-header>
+                    <mat-card-title>Title: {{region.title}}</mat-card-title>
+                    <mat-card-subtitle>Seed: {{region.seed}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-actions>
+                    <button mat-button [routerLink]="['/regions', region._id]">Go to Region</button>
+                    <button mat-icon-button	(click)='deleteRegion(region._id)'>
+                        <fa-icon [icon]="faTrash" size="lg"></fa-icon>
+                    </button>
+                </mat-card-actions>
+            </div>
+        </mat-card>
+    </div>
 </div>
