--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,15 +1,19 @@
-<form (submit)="register()">
-    <div class="form-group">
-      <label for="name">Full name</label>
-      <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
-    </div>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
-    </div>
-    <button type="submit" class="btn btn-default">Register!</button>
-  </form>
+<div class="container">
+  <div class="row justify-content-center">
+    <form (submit)="register()">
+        <div class="form-group">
+          <label for="name">Full name</label>
+          <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+        </div>
+        <button mat-raised-button color="primary" type="submit" class="btn btn-default">Register!</button>
+    </form>
+  </div>
+</div>
