--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -5,7 +5,7 @@
                 <mat-card-title>Name: {{city.element.name}}</mat-card-title>
                 <mat-card-subtitle>Description: The {{city.element.description}}</mat-card-subtitle>
                 <mat-list-item *ngFor="let char of city.chars">
-                    <button mat-button [routerLink]="['/characters', char._id]">{{char.name}}</button>
+                    <button mat-raised-button color="primary" [routerLink]="['/characters', char._id]">{{char.name}}</button>
                 </mat-list-item>
             </mat-card-header>
         </div>
