--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,8 @@
         <img src="assets\olympus_studios_logo.png">
     </div>
     <div class="row justify-content-center">
-        <p style="padding: 13px;">
-            by Olympus Studios 2021
-        </p>
+        <div class="text-center">© 2021 Copyright:
+            <a href="https://olympus-studios.com/">Olympus-Studios.com</a>
+        </div>
     </div>
 </div>
