--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -43,15 +43,19 @@
 
     <mat-card *ngFor="let character of characters" style="margin-top:10px;">
         <div class="row">
-            <mat-card-header>
-                <mat-card-title>Name: {{character.name}}</mat-card-title>
-            </mat-card-header>
-            <mat-card-actions>
-                <button mat-button [routerLink]="['/characters', character._id]">Play</button>
-                <button mat-icon-button	(click)='deleteCharacter(character._id)'>
-                    <fa-icon [icon]="faTrash" size="lg"></fa-icon>
-                </button>
-            </mat-card-actions>
+            <div class="col">
+                <mat-card-header>
+                    <mat-card-title>Name: {{character.name}}</mat-card-title>
+                </mat-card-header>
+            </div>
+            <div class="col-4 text-right">
+                <mat-card-actions>
+                    <button mat-raised-button color="primary" [routerLink]="['/characters', character._id]">Play</button>
+                    <button mat-icon-button	color="secondary" (click)='deleteCharacter(character._id)'>
+                        <fa-icon [icon]="faTrash" size="lg"></fa-icon>
+                    </button>
+                </mat-card-actions>
+            </div>
         </div>
     </mat-card>
 
