--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -7,6 +7,8 @@
                 <mat-list-item role="listitem">ID: {{region?._id}}</mat-list-item>
                 <mat-list-item role="listitem">Seed: {{region?.seed}}</mat-list-item>
                 <mat-list-item role="listitem">Size: {{region?.mapsize}} </mat-list-item>
+                <mat-list-item role="listitem">X-Coordinate: {{region?.x}} </mat-list-item>
+                <mat-list-item role="listitem">Y-Coordinate: {{region?.y}} </mat-list-item>
                 <mat-list-item role="listitem">Create date: {{region?.date}}</mat-list-item>   
         </mat-list>
     </div>
