added noise info to region detail view

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -6,6 +6,7 @@
         <mat-list role="list">
                 <mat-list-item role="listitem">ID: {{region?._id}}</mat-list-item>
                 <mat-list-item role="listitem">Seed: {{region?.seed}}</mat-list-item>
+                <mat-list-item role="listitem">Noise: {{region?.noise}} </mat-list-item>
                 <mat-list-item role="listitem">Size: {{region?.mapsize}} </mat-list-item>
                 <mat-list-item role="listitem">X-Coordinate: {{region?.x}} </mat-list-item>
                 <mat-list-item role="listitem">Y-Coordinate: {{region?.y}} </mat-list-item>
