added wordmap prototype

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
         <a class="nav-link" routerLink="/characters">Characters</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/regions">World</a>
+        <a class="nav-link" routerLink="/regions">Regions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/worldmap">Worldmap</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about">About</a>
