--- a/src/app/worldmap/worldmap.component.html
+++ b/src/app/worldmap/worldmap.component.html
@@ -1,5 +1,1 @@
-<div class="row justify-content-center">
-    World Map
-</div>
-
-<div id="gameContainer" class="row justify-content-center"></div>
+<div id="gameContainer"></div>
