fixed region loading issues

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -60,4 +60,7 @@
         </div>
     </mat-card>
 
+    <div class="row justify-content-center">
+        <button mat-raised-button color="warn" (click)='deleteAllCharacters()'>Delete all characters</button>
+    </div>
 </div>
