--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row justify-content-center">
-        <h1 class="text-center"> Region: {{region?.title}}</h1>
+        <h1 class="text-center"> Region: {{region?.name}}</h1>
     </div>
     <div class="row justify-content-center">
         <mat-list role="list">
