--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -10,7 +10,7 @@
                 <mat-list-item role="listitem">Type: {{region?.type}} </mat-list-item>
                 <mat-list-item role="listitem">X-Coordinate: {{region?.x}} </mat-list-item>
                 <mat-list-item role="listitem">Y-Coordinate: {{region?.y}} </mat-list-item>
-                <mat-list-item role="listitem">Create date: {{region?.create_date}}</mat-list-item>   
+                <mat-list-item role="listitem">Create date: {{region?.createDate}}</mat-list-item>   
         </mat-list>
     </div>
     <hr>
