--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,19 +7,22 @@
   <div class="collapse navbar-collapse" id="navbar" [(ngbCollapse)]="isCollapsed">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/characters">Characters</a>
+        <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/characters">Characters</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/regions">Regions</a>
+        <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/regions">Regions</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/worldmap">Worldmap</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/about">About</a>
+        <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/worldmap">Worldmap</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/profile">{{ auth.getUserDetails()?.name }}</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="auth.isAdmin()" routerLink="/administration">Administration</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about">About</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
