--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,11 +3,11 @@
     <form (submit)="login()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="password">
         </div>
         <button mat-raised-button color="primary" type="submit" class="btn btn-default">Sign in!</button>
     </form>
