added worldmap query params

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -3,7 +3,8 @@
         <h1 class="text-center"> Region: {{region?.name}}</h1>
     </div>
     <div class="row justify-content-center">
-        <mat-list role="list">
+        <div class="col-xs-6">
+            <mat-list role="list">
                 <mat-list-item role="listitem">ID: {{region?._id}}</mat-list-item>
                 <mat-list-item role="listitem">Seed: {{region?.seed}}</mat-list-item>
                 <mat-list-item role="listitem">Noise: {{region?.noise}} </mat-list-item>
@@ -11,8 +12,14 @@
                 <mat-list-item role="listitem">X-Coordinate: {{region?.x}} </mat-list-item>
                 <mat-list-item role="listitem">Y-Coordinate: {{region?.y}} </mat-list-item>
                 <mat-list-item role="listitem">Create date: {{region?.createDate}}</mat-list-item>   
-        </mat-list>
+        </mat-list>    
+        </div>
+        <div class="col-xs-6 my-auto">
+            <button mat-raised-button color="primary" (click)="goToMap()">Show on Worldmap</button>
+    
+        </div>
     </div>
+  
     <hr>
     <div class="row justify-content-center">
         <button mat-raised-button color="primary" [routerLink]="['cities']" [style.display]="!showOutlet ? 'block' : 'none'">Show Cities</button>
