--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbar" [(ngbCollapse)]="isCollapsed">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0" (click)="isCollapsed = !isCollapsed">
       <li class="nav-item">
         <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/characters">Characters</a>
       </li>
