--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbar" [(ngbCollapse)]="isCollapsed">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0" (click)="isCollapsed = !isCollapsed">
+  <div class="collapse navbar-collapse" id="navbar" [(ngbCollapse)]="isCollapsed" (click)="isCollapsed = !isCollapsed">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" *ngIf="auth.isLoggedIn()" routerLink="/characters">Characters</a>
       </li>
