added search function for regions

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -12,6 +12,9 @@
         <button class='btn-margin' mat-raised-button color="warn" (click)='deleteAllRegions()'>Delete all regions</button>
     </div>
     <div class="row justify-content-center">
+        <button class='btn-margin' mat-raised-button color="primary" (click)='createRegion()'>Create 1 Region</button>
+    </div>
+    <div class="row justify-content-center">
         <button class='btn-margin' mat-raised-button color="secondary" (click)='batchCreateRegions(100)'>Create 100 Regions</button>
     </div>
     <hr>
