--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -11,7 +11,7 @@
                 <mat-list-item role="listitem">Type: {{region?.type}} </mat-list-item>
                 <mat-list-item role="listitem">X-Coordinate: {{region?.x}} </mat-list-item>
                 <mat-list-item role="listitem">Y-Coordinate: {{region?.y}} </mat-list-item>
-                <mat-list-item role="listitem">Create date: {{region?.createDate}}</mat-list-item>   
+                <mat-list-item role="listitem">Create date: {{region?.createdDate}}</mat-list-item>   
         </mat-list>    
         </div>
         <div class="col-xs-6 my-auto">
