--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <img *ngIf="!isProd" src="assets\devBanner.png">
   <a class="navbar-brand" routerLink="/home">Odyssey</a>
+
   <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse" data-target="navbar"  aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarTogglerDemo02">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,4 +43,3 @@
 </nav>
 
 <router-outlet></router-outlet>
-
